--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OXALUNE SALE</title>
+    <link rel="icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj9EFGLWlCZo6_VTCGm_dSXLp9EihA2-XqrwT3UjvIPy0DwKuiPSAtfbL2Q0zoBOBqjo1DnRcC0kKZ2xCfi1V6ijdvGLqkGSYbXzQGrzVIvZuk7k7IOH5v8ZWVvdLYJkaXwr34qXUJxCcS8jRhMZSSicFLp1JbFSgyT7-Oul5h7R8zrR1lK4sb_LasbYK0/s768/oxalune.webp">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -282,7 +283,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <a href="https://cuty.io/oxalune" target="_blank"><img src="https://cdn.cuty.io/images/public/og-image.png" class="card-img-top" alt="Shortlink"></a>
+
                             <div class="card-footer">*Complete for Support</div>
                         </div>
                     </div>
