--- a/index.html
+++ b/index.html
@@ -277,13 +277,13 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <a href="https://exe.io/oxalune" target="_blank"><img src="https://exe.io/img/og-image.png" class="card-img-top" alt="Shortlink"></a>
+                            <a href="https://exe.io/oxalune" target="_blank"><img src="https://shorturl.at/rU1Se" class="card-img-top" alt="Shortlink"></a>
                             <div class="card-footer">*Complete for Support</div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card h-100">
-
+                            <a href="https://cuty.io/oxalune" target="_blank"><img src="https://cdn.cuty.io/images/public/og-image.png" class="card-img-top" alt="Shortlink"></a>
                             <div class="card-footer">*Complete for Support</div>
                         </div>
                     </div>
